--- a/assets/css/sl.css
+++ b/assets/css/sl.css
@@ -175,6 +175,18 @@ body{
     justify-content:center;
     align-items: flex-start;
 }
+.sl-flex-column-center-flex-start{
+    display: flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items: center;
+}
+.sl-flex-column-flex-start-flex-start{
+    display: flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items: flex-start;
+}
 .sl-padding-top-10px{
     padding-top: 10px;
 }
