--- a/assets/css/sl.css
+++ b/assets/css/sl.css
@@ -153,7 +153,7 @@ body{
     color: #FFFFFF;
 }
 .sl-icon-color-red{
-    color: #FF3366;
+    color: #F95E98;
 }
 .sl-font-color-gray{
     color:#999999;
